tests/baselines/reference/assignmentLHSIsValue.errors.txt
==== tests/cases/compiler/assignmentLHSIsValue.ts (37 errors) ====
    // expected error for all the LHS of assignments
    var value;
    
    // this
    class C {
        constructor() { this = value; }
                        ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
        foo() { this = value; }
                ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
        static sfoo() { this = value; }
                        ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    }
    
    function foo() { this = value; }
                     ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    this = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    // identifiers: module, class, enum, function
    module M { export var a; }
    M = value;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    C = value;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    enum E { }
    E = value;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    foo = value;
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    // literals
    null = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    true = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    false = value;
    ~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    0 = value;
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    '' = value;
    ~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    /d+/ = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    // object literals
    { a: 0} = value;
            ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    // array literals
    ['', ''] = value;
    ~~~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    // super
    class Derived extends C {
        constructor() { super(); super = value; }
                                       ~
!!! error TS1005: '.' expected.
    
        foo() { super = value }
                      ~
!!! error TS1005: '.' expected.
    
        static sfoo() { super = value; }
                              ~
!!! error TS1005: '.' expected.
    }
    
    // function expression
    function bar() { } = value;
                       ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    () => { } = value;
              ~
!!! error TS1005: ';' expected.
    
    // function calls
    foo() = value;
    ~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    
    // parentheses, the containted expression is value
    (this) = value;
    ~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (M) = value;
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (C) = value;
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (E) = value;
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (foo) = value;
    ~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (null) = value;
    ~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (true) = value;
    ~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (0) = value;
    ~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    ('') = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (/d+/) = value;
    ~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    ({}) = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    ([]) = value;
    ~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (function baz() { }) = value;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.
    (foo()) = value;
    ~~~~~~~
!!! error TS2130: Invalid left-hand side of assignment expression.